# zoho-sdk

./: .gitignore  404.html  AGENTS.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.security/: secrets-baseline.json
admin-live-validation/: index.html
analytics/bulk/: index.html
analytics/data/: index.html
analytics/metadata/: index.html
analytics/overview/: index.html
auth-cli/: index.html
auth-credentials/: index.html
authentication/: index.html
changelog/: index.html
client-lifecycle/: index.html
cliq/channels/: index.html
cliq/chats/: index.html
cliq/messages/: index.html
cliq/overview/: index.html
cliq/threads/: index.html
cliq/users/: index.html
codegen/: index.html
contributing/: index.html
creator/data/: index.html
creator/discovery/: index.html
creator/meta/: index.html
creator/overview/: index.html
creator/publish/: index.html
crm/discovery/: index.html
crm/modules/: index.html
crm/records/: index.html
docs/: admin-live-validation.md  auth-cli.md  auth-credentials.md  authentication.md  changelog.md  client-lifecycle.md  codegen.md  contributing.md  errors.md  getting-started.md  index.md  performance-caching.md  scopes.md
docs/analytics/: bulk.md  data.md  metadata.md  overview.md
docs/cliq/: channels.md  chats.md  messages.md  overview.md  threads.md  users.md
docs/creator/: data.md  discovery.md  meta.md  overview.md  publish.md
docs/crm/: coql.md  discovery.md  modules.md  records.md
docs/ingestion/: analytics.md  cliq.md  crm.md  mail.md  overview.md  writer.md
docs/mail/: accounts.md  folders.md  messages.md  overview.md  threads.md
docs/people/: employees.md  files.md  forms.md  overview.md
docs/projects/: overview.md  portals.md  projects.md  tasks.md
docs/sheet/: overview.md  tabular.md  workbooks.md  worksheets.md
docs/stylesheets/: enterprise.css
docs/use-cases/: enterprise-search.md  fastapi-crm.md  ingestion.md  (+3 more)
errors/: index.html
getting-started/: index.html
performance-caching/: index.html
scopes/: index.html
search/: search_index.json
tests/: conftest.py  test_client.py
tools/: __init__.py  admin_validate_live.py  render_sparkify_docs.py  scopes_sync.py  security_scan.py  sync_wiki.py
(+246 files in other folders)
